--- a/ReQuantum/Modules/Calendar/Presentations/EventListView.axaml
+++ b/ReQuantum/Modules/Calendar/Presentations/EventListView.axaml
@@ -4,11 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:ReQuantum.ViewModels"
              xmlns:entities="clr-namespace:ReQuantum.Modules.Calendar.Entities"
+             xmlns:presentations="clr-namespace:ReQuantum.Modules.Calendar.Presentations"
              mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
              x:Class="ReQuantum.Views.EventListView"
-             x:DataType="viewModels:EventListViewModel">
+             x:DataType="presentations:EventListViewModel">
   <Design.DataContext>
-    <viewModels:EventListViewModel />
+    <presentations:EventListViewModel />
   </Design.DataContext>
 
   <Grid>
@@ -56,13 +57,13 @@
                     </TextBlock>
                   </StackPanel>
                   <Button Grid.Column="1" 
-                        Command="{Binding ((viewModels:EventListViewModel)DataContext).DeleteEventCommand,
+                        Command="{Binding ((presentations:EventListViewModel)DataContext).DeleteEventCommand,
                             RelativeSource={RelativeSource AncestorType=UserControl},
                             FallbackValue={x:Null}}"
                         CommandParameter="{Binding}"
                         Padding="8,4"
                         VerticalAlignment="Top">
-                    <TextBlock Text="{Binding ((viewModels:EventListViewModel)DataContext).Localizer[Delete],
+                    <TextBlock Text="{Binding ((presentations:EventListViewModel)DataContext).Localizer[Delete],
                                         RelativeSource={RelativeSource AncestorType=UserControl}, 
                                         FallbackValue=Delete}" 
                                FontSize="12"/>
